--- a/peritagens.html
+++ b/peritagens.html
@@ -75,6 +75,6 @@
             <button type="submit">Salvar Peritagem</button>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="peritagem.js"></script>
 </body>
 </html>
