--- a/peritagens.html
+++ b/peritagens.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Peritagem</title>
-    <link rel="stylesheet" href="peritagem.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -75,6 +75,6 @@
             <button type="submit">Salvar Peritagem</button>
         </form>
     </div>
-    <script src="peritagem.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
