--- a/peritagens.html
+++ b/peritagens.html
@@ -65,6 +65,7 @@
                         <th>Diâmetro (mm)</th>
                         <th>Comprimento (mm)</th>
                         <th>Largura (mm)</th>
+                        <th>Excluir</th>
                     </tr>
                 </thead>
                 <tbody>
