--- a/peritagens.html
+++ b/peritagens.html
@@ -3,78 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Peritagem</title>
+    <title>Peritagem</title>
     <link rel="stylesheet" href="peritagem.css">
 </head>
-<body>
+<body onload="definirDataHoje()">
     <div class="container">
-        <h1>Página de Peritagem</h1>
-        <form id="peritagemForm">
+        <h1>Formulário de Peritagem</h1>
+        <div class="form-group">
+            <label for="nomeCliente">Nome do Cliente:</label>
+            <input type="text" id="nomeCliente" placeholder="Digite o nome do cliente">
+        </div>
+        <div class="form-group">
+            <label for="nomeEquipamento">Nome do Equipamento:</label>
+            <input type="text" id="nomeEquipamento" placeholder="Digite o nome do equipamento">
+        </div>
+        <div class="form-group ss-id-group">
+            <label for="ss">SS (Número de Série):</label>
+            <input type="text" id="ss" placeholder="Número de Série">
+            <label for="id">ID:</label>
+            <select id="id">
+                <script>
+                    for (let i = 1; i <= 50; i++) {
+                        document.write(`<option value="${i}">${i}</option>`);
+                    }
+                </script>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="responsavel">Nome do Responsável pela Peritagem:</label>
+            <input type="text" id="responsavel" placeholder="Digite o nome do responsável">
+        </div>
+        <div class="form-group">
+            <label for="dataPeritagem">Data da Peritagem:</label>
+            <input type="date" id="dataPeritagem">
+        </div>
+        <div class="form-group">
+            <label for="pecas">Peças:</label>
+            <select id="pecas" onchange="exibirOpcoes()">
+                <option value="">Selecione uma peça</option>
+                <option value="haste">Haste</option>
+                <option value="camisa">Camisa</option>
+                <option value="olhal">Olhal</option>
+                <option value="flange">Flange</option>
+                <option value="fundo">Fundo</option>
+                <option value="embolo">Êmbolo</option>
+                <option value="espacador">Espaçador</option>
+                <option value="jogoVedacao">Jogo de Vedação</option>
+            </select>
+        </div>
+        <div id="opcoesEspecificas" class="hidden">
+            <div class="form-group" id="acoesContainer"></div>
             <div class="form-group">
-                <label for="cliente">Nome do Cliente:</label>
-                <input type="text" id="cliente" required>
+                <label for="diametro">Diâmetro (mm):</label>
+                <input type="text" id="diametro" placeholder="Diâmetro">
             </div>
             <div class="form-group">
-                <label for="equipamento">Nome do Equipamento:</label>
-                <input type="text" id="equipamento" required>
-            </div>
-            <div class="form-group ss-id-group">
-                <label for="ss">SS (Número de Série):</label>
-                <input type="text" id="ss" required maxlength="10">
-                <select id="id">
-                    <option value="">ID</option>
-                    <!-- Opções de 1 a 50 -->
-                    <script>
-                        for (let i = 1; i <= 50; i++) {
-                            document.write(`<option value="${i}">${i}</option>`);
-                        }
-                    </script>
-                </select>
+                <label for="comprimento">Comprimento (mm):</label>
+                <input type="text" id="comprimento" placeholder="Comprimento">
             </div>
             <div class="form-group">
-                <label for="responsavel">Nome do Responsável pela Peritagem:</label>
-                <input type="text" id="responsavel" required>
+                <label for="largura">Largura (mm):</label>
+                <input type="text" id="largura" placeholder="Largura">
             </div>
-            <div class="form-group">
-                <label for="data">Data da Peritagem:</label>
-                <input type="date" id="data" value="" required readonly>
-            </div>
-            <div class="form-group">
-                <label for="peca">Peças:</label>
-                <select id="peca">
-                    <option value="">Selecione uma peça</option>
-                    <option value="haste">Haste</option>
-                    <option value="camisa">Camisa</option>
-                    <option value="olhal">Olhal</option>
-                    <option value="flange">Flange</option>
-                    <option value="fundo">Fundo</option>
-                    <option value="embolo">Êmbolo</option>
-                    <option value="espacador">Espaçador</option>
-                    <option value="jogoVedacao">Jogo de Vedação</option>
-                </select>
-                <button type="button" onclick="adicionarPeca()">Adicionar Peça</button>
-            </div>
-
-            <div id="opcoesPeca" class="hidden"></div>
-
-            <table id="resumoTable">
-                <thead>
-                    <tr>
-                        <th>Peça</th>
-                        <th>Ação</th>
-                        <th>Diâmetro (mm)</th>
-                        <th>Comprimento (mm)</th>
-                        <th>Largura (mm)</th>
-                        <th>Excluir</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-
-            <input type="file" id="anexo" accept="image/*">
-            <button type="submit">Salvar Peritagem</button>
-        </form>
+            <button onclick="adicionarPeca()">Adicionar Peça</button>
+        </div>
+        <table id="tabelaResumos">
+            <thead>
+                <tr>
+                    <th>Peça</th>
+                    <th>Ação</th>
+                    <th>Diâmetro (mm)</th>
+                    <th>Comprimento (mm)</th>
+                    <th>Largura (mm)</th>
+                    <th>Excluir</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- As peças adicionadas aparecerão aqui -->
+            </tbody>
+        </table>
     </div>
     <script src="peritagem.js"></script>
 </body>
