--- a/peritagens.html
+++ b/peritagens.html
@@ -3,86 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peritagem</title>
-    <link rel="stylesheet" href="peritagem.css">
+    <title>Painel de Peritagens</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body onload="definirDataHoje()">
+<body>
     <div class="container">
-        <h1>Formulário de Peritagem</h1>
-        <div class="form-group">
-            <label for="nomeCliente">Nome do Cliente:</label>
-            <input type="text" id="nomeCliente" placeholder="Digite o nome do cliente">
-        </div>
-        <div class="form-group">
-            <label for="nomeEquipamento">Nome do Equipamento:</label>
-            <input type="text" id="nomeEquipamento" placeholder="Digite o nome do equipamento">
-        </div>
-        <div class="form-group ss-id-group">
-            <label for="ss">SS (Número de Série):</label>
-            <input type="text" id="ss" placeholder="Número de Série">
-            <label for="id">ID:</label>
-            <select id="id">
-                <script>
-                    for (let i = 1; i <= 50; i++) {
-                        document.write(`<option value="${i}">${i}</option>`);
-                    }
-                </script>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="responsavel">Nome do Responsável pela Peritagem:</label>
-            <input type="text" id="responsavel" placeholder="Digite o nome do responsável">
-        </div>
-        <div class="form-group">
-            <label for="dataPeritagem">Data da Peritagem:</label>
-            <input type="date" id="dataPeritagem">
-        </div>
-        <div class="form-group">
-            <label for="pecas">Peças:</label>
-            <select id="pecas" onchange="exibirOpcoes()">
-                <option value="">Selecione uma peça</option>
-                <option value="haste">Haste</option>
-                <option value="camisa">Camisa</option>
-                <option value="olhal">Olhal</option>
-                <option value="flange">Flange</option>
-                <option value="fundo">Fundo</option>
-                <option value="embolo">Êmbolo</option>
-                <option value="espacador">Espaçador</option>
-                <option value="jogoVedacao">Jogo de Vedação</option>
-            </select>
-        </div>
-        <div id="opcoesEspecificas" class="hidden">
-            <div class="form-group" id="acoesContainer"></div>
-            <div class="form-group">
-                <label for="diametro">Diâmetro (mm):</label>
-                <input type="text" id="diametro" placeholder="Diâmetro">
+        <h1>Painel de Peritagens</h1>
+        <div class="options-container">
+            <div class="option-box" id="criarPeritagem">
+                <h2>Criar Peritagem</h2>
+                <p>Inicie uma nova peritagem para seu cliente.</p>
             </div>
-            <div class="form-group">
-                <label for="comprimento">Comprimento (mm):</label>
-                <input type="text" id="comprimento" placeholder="Comprimento">
+            <div class="option-box" id="consultarPeritagem">
+                <h2>Consultar Peritagem</h2>
+                <p>Veja detalhes das peritagens anteriores.</p>
             </div>
-            <div class="form-group">
-                <label for="largura">Largura (mm):</label>
-                <input type="text" id="largura" placeholder="Largura">
+            <div class="option-box" id="excluirPeritagem">
+                <h2>Excluir Peritagem</h2>
+                <p>Remova peritagens que não são mais necessárias.</p>
             </div>
-            <button onclick="adicionarPeca()">Adicionar Peça</button>
         </div>
-        <table id="tabelaResumos">
-            <thead>
-                <tr>
-                    <th>Peça</th>
-                    <th>Ação</th>
-                    <th>Diâmetro (mm)</th>
-                    <th>Comprimento (mm)</th>
-                    <th>Largura (mm)</th>
-                    <th>Excluir</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- As peças adicionadas aparecerão aqui -->
-            </tbody>
-        </table>
     </div>
-    <script src="peritagem.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
