--- a/peritagens.html
+++ b/peritagens.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel de Peritagens</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="peritagem.css">
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="peritagem.js"></script>
 </body>
 </html>
