--- a/criarperitagem.html
+++ b/criarperitagem.html
@@ -1,6 +1,5 @@
-
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +9,8 @@
 <body>
     <div class="container">
         <h1>Criar Peritagem</h1>
-        <form id="peritagemForm">
+
+        <form id="form-peritagem">
             <div class="form-group">
                 <label for="cliente">Nome do Cliente:</label>
                 <input type="text" id="cliente" name="cliente" required>
@@ -21,20 +21,20 @@
                 <input type="text" id="equipamento" name="equipamento" required>
             </div>
 
-            <div class="form-group ss-id-group">
-                <div>
+            <div class="form-row">
+                <div class="form-group">
                     <label for="ss">SS (Número de Série):</label>
                     <input type="text" id="ss" name="ss" required>
                 </div>
-                <div>
-                    <label for="id">ID:</label>
-                    <select id="id" name="id">
+                <div class="form-group">
+                    <label for="id">ID (Número de Identificação):</label>
+                    <select id="id" name="id" required>
                         <!-- Opções de 1 a 50 -->
-                        <script>
-                            for (let i = 1; i <= 50; i++) {
-                                document.write(`<option value="${i}">${i}</option>`);
-                            }
-                        </script>
+                        <option value="">Selecione...</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <!-- Continue até 50 -->
+                        <option value="50">50</option>
                     </select>
                 </div>
             </div>
@@ -46,37 +46,24 @@
 
             <div class="form-group">
                 <label for="data">Data da Peritagem:</label>
-                <input type="date" id="data" name="data" value="">
+                <input type="text" id="data" name="data" readonly>
             </div>
 
             <div class="form-group">
-                <label for="peca">Peças:</label>
-                <select id="peca" name="peca" onchange="mostrarOpcoesPeca()">
-                    <option value="" disabled selected>Selecione uma peça</option>
-                    <option value="Haste">Haste</option>
-                    <option value="Camisa">Camisa</option>
-                    <option value="Olhal">Olhal</option>
-                    <option value="Flange">Flange</option>
-                    <option value="Fundo">Fundo</option>
-                    <option value="Êmbolo">Êmbolo</option>
-                    <option value="Espaçador">Espaçador</option>
-                    <option value="Jogo de Vedação">Jogo de Vedação</option>
+                <label for="peca">Peça:</label>
+                <select id="peca" name="peca" required>
+                    <option value="">Selecione a peça...</option>
+                    <option value="haste">Haste</option>
+                    <option value="camisa">Camisa</option>
+                    <!-- Outras peças -->
                 </select>
             </div>
 
-            <!-- Campos dinâmicos para as peças -->
-            <div id="opcoesPeca" class="hidden"></div>
-
-            <div class="form-group">
-                <label for="anexos">Anexar fotos:</label>
-                <input type="file" id="anexos" name="anexos" multiple>
-            </div>
-
-            <button type="button" onclick="adicionarPeca()">Adicionar Peça</button>
+            <button type="button" id="adicionarPeca">Adicionar Peça</button>
         </form>
 
-        <h2>Resumo das Peças</h2>
-        <table id="resumoTabela">
+        <h2>Peças Adicionadas:</h2>
+        <table id="tabelaResumo">
             <thead>
                 <tr>
                     <th>Peça</th>
@@ -84,14 +71,12 @@
                     <th>Diâmetro (mm)</th>
                     <th>Comprimento (mm)</th>
                     <th>Largura (mm)</th>
-                    <th>Excluir</th>
                 </tr>
             </thead>
-            <tbody></tbody>
+            <tbody>
+                <!-- Peças adicionadas aparecerão aqui -->
+            </tbody>
         </table>
-
-        <button type="button" onclick="resetarFormulario()">Enviar e Resetar</button>
-        <button type="button" onclick="gerarPDF()">Gerar PDF</button>
     </div>
 
     <script src="criarperitagem.js"></script>
