--- a/criarperitagem.html
+++ b/criarperitagem.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="peritagem.css">
+    <link rel="stylesheet" href="criarperitagem.css">
     <title>Criar Peritagem</title>
 </head>
 <body>
@@ -86,6 +86,6 @@
         <button id="enviarDados">Enviar</button>
         <button id="gerarPDF">Gerar PDF</button>
     </div>
-    <script src="peritagem.js"></script>
+    <script src="criarperitagem.js"></script>
 </body>
 </html>
