--- a/criarperitagem.html
+++ b/criarperitagem.html
@@ -3,29 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="criarperitagem.css">
     <title>Criar Peritagem</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <div class="container">
         <h1>Criar Peritagem</h1>
         <div class="form-group">
-            <label for="nomeCliente">Nome do Cliente:</label>
-            <input type="text" id="nomeCliente" placeholder="Digite o nome do cliente">
+            <label for="cliente">Nome do Cliente:</label>
+            <input type="text" id="cliente" placeholder="Nome do cliente">
         </div>
         <div class="form-group">
-            <label for="nomeEquipamento">Nome do Equipamento:</label>
-            <input type="text" id="nomeEquipamento" placeholder="Digite o nome do equipamento">
+            <label for="equipamento">Nome do Equipamento:</label>
+            <input type="text" id="equipamento" placeholder="Nome do equipamento">
         </div>
         <div class="form-group">
             <label for="ss">SS:</label>
             <div class="ss-id-group">
-                <input type="text" id="ss" placeholder="000000" maxlength="6">
+                <input type="text" id="ss" maxlength="6" placeholder="SS" required>
                 <select id="id">
                     <option value="" disabled selected>ID</option>
+                    <!-- Opções de ID de 1 a 50 -->
                     <script>
                         for (let i = 1; i <= 50; i++) {
-                            document.write(`<option value="${i}">${i}</option>`);
+                            document.write('<option value="' + i + '">' + i + '</option>');
                         }
                     </script>
                 </select>
@@ -33,43 +34,42 @@
         </div>
         <div class="form-group">
             <label for="responsavel">Nome do Responsável pela Peritagem:</label>
-            <input type="text" id="responsavel" placeholder="Digite o nome do responsável">
+            <input type="text" id="responsavel" placeholder="Nome do responsável">
         </div>
         <div class="form-group">
-            <label for="dataPeritagem">Data da Peritagem:</label>
-            <input type="date" id="dataPeritagem" value="<?php echo date('Y-m-d'); ?>" readonly>
+            <label for="data">Data da Peritagem:</label>
+            <input type="text" id="data" readonly>
         </div>
         <div class="form-group">
-            <label for="pecas">Peças:</label>
-            <select id="pecas">
-                <option value="haste">Haste</option>
-                <option value="camisa">Camisa</option>
-                <option value="olhal">Olhal</option>
-                <option value="flange">Flange</option>
-                <option value="fundo">Fundo</option>
-                <option value="embolo">Êmbolo</option>
-                <option value="espacador">Espaçador</option>
-                <option value="jogoDeVedacao">Jogo de Vedação</option>
+            <label for="peca">Peças:</label>
+            <select id="peca" onchange="exibirOpcoes()">
+                <option value="" disabled selected>Selecione uma peça</option>
+                <option value="Haste">Haste</option>
+                <option value="Camisa">Camisa</option>
+                <option value="Olhal">Olhal</option>
+                <option value="Flange">Flange</option>
+                <option value="Fundo">Fundo</option>
+                <option value="Embolo">Êmbolo</option>
+                <option value="Espacador">Espaçador</option>
+                <option value="Jogo de Vedacao">Jogo de Vedação</option>
             </select>
-            <button id="adicionarPeca">Adicionar Peça</button>
         </div>
         <div id="opcoesPeca" class="hidden">
-            <h3>Ações Disponíveis:</h3>
-            <div id="acoesDisponiveis" class="acoes-container"></div>
-            <div class="form-group">
+            <div class="acoes-container">
+                <!-- As opções serão adicionadas aqui com JavaScript -->
+            </div>
+            <div class="medidas-container hidden">
                 <label for="diametro">Diâmetro (mm):</label>
-                <input type="number" id="diametro" placeholder="Diâmetro da peça">
-            </div>
-            <div class="form-group">
+                <input type="number" id="diametro" placeholder="Diâmetro (mm)">
                 <label for="comprimento">Comprimento (mm):</label>
-                <input type="number" id="comprimento" placeholder="Comprimento da peça">
-            </div>
-            <div class="form-group">
+                <input type="number" id="comprimento" placeholder="Comprimento (mm)">
                 <label for="largura">Largura (mm):</label>
-                <input type="number" id="largura" placeholder="Largura da peça">
+                <input type="number" id="largura" placeholder="Largura (mm)">
             </div>
+            <button onclick="adicionarPeca()">Adicionar Peça</button>
         </div>
-        <table id="tabelaResumo">
+
+        <table id="resumoTable">
             <thead>
                 <tr>
                     <th>Peça</th>
@@ -77,15 +77,23 @@
                     <th>Diâmetro (mm)</th>
                     <th>Comprimento (mm)</th>
                     <th>Largura (mm)</th>
+                    <th>Ação</th> <!-- Coluna para excluir -->
                 </tr>
             </thead>
             <tbody>
-                <!-- Linhas da tabela serão inseridas aqui -->
+                <!-- As linhas da tabela serão adicionadas aqui -->
             </tbody>
         </table>
-        <button id="enviarDados">Enviar</button>
-        <button id="gerarPDF">Gerar PDF</button>
+
+        <!-- Botão para anexar arquivos -->
+        <div class="form-group">
+            <label for="anexos">Anexar Arquivos:</label>
+            <input type="file" id="anexos" accept="image/*" multiple>
+        </div>
+
+        <button onclick="enviarFormulario()">Enviar</button>
     </div>
-    <script src="criarperitagem.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
