--- a/criarperitagem.html
+++ b/criarperitagem.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar Peritagem</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="criarperitagem.css">
 </head>
 <body>
     <div class="container">
@@ -94,6 +94,6 @@
         <button onclick="enviarFormulario()">Enviar</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="criarperitagem.js"></script>
 </body>
 </html>
