--- a/criarperitagem.html
+++ b/criarperitagem.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar Peritagem</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="criarperitagem.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
@@ -96,6 +96,6 @@
         <button onclick="gerarPDF()">Gerar PDF</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="criarperitagem.js"></script>
 </body>
 </html>
