--- a/criarperitagem.html
+++ b/criarperitagem.html
@@ -6,6 +6,7 @@
     <title>Criar Peritagem</title>
     <link rel="stylesheet" href="criarperitagem.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.12/jspdf.plugin.autotable.min.js"></script> <!-- Adicionado para autoTable -->
 </head>
 <body>
     <div class="container">
