--- a/criarperitagem.html
+++ b/criarperitagem.html
@@ -46,14 +46,14 @@
             <label for="peca">Peças:</label>
             <select id="peca" onchange="exibirOpcoes()">
                 <option value="" disabled selected>Selecione uma peça</option>
-                <option value="haste">Haste</option>
-                <option value="camisa">Camisa</option>
-                <option value="olhal">Olhal</option>
-                <option value="flange">Flange</option>
-                <option value="fundo">Fundo</option>
-                <option value="embolo">Êmbolo</option>
-                <option value="espacador">Espaçador</option>
-                <option value="jogoVedacao">Jogo de Vedação</option>
+                <option value="Haste">Haste</option>
+                <option value="Camisa">Camisa</option>
+                <option value="Olhal">Olhal</option>
+                <option value="Flange">Flange</option>
+                <option value="Fundo">Fundo</option>
+                <option value="Embolo">Êmbolo</option>
+                <option value="Espacador">Espaçador</option>
+                <option value="Jogo de Vedacao">Jogo de Vedação</option>
             </select>
         </div>
         <div id="opcoesPeca" class="hidden">
@@ -89,7 +89,7 @@
         </div>
 
         <button onclick="enviarFormulario()">Enviar</button>
-        <button onclick="gerarPDF()">Gerar PDF com SS e ID</button>
+        <button onclick="gerarPDF()">Gerar PDF</button>
         <button onclick="salvarPaginaComoPDF()">Salvar Página como PDF</button>
     </div>
 
